         definitions.
         (resolves issue #171)
  ADDED: Only/defer methods to MultilingualManager.
         (resolves issue #166)
  ADDED: Support for ForeignKey and OneToOneField.
         (thanks to Braden MacDonald and Jacek Tomaszewski,
          resolves issue #161)
  ADDED: An auto-population option to the loaddata command.
         (resolves issue #160)

  FIXED: Compatibility with Django 1.6 development version.
         (resolves issue #169)
  FIXED: Handling of 3rd party apps' ModelForms.
         (resolves issue #167)
  FIXED: Triggering field fallback on its default value rather than empty
         string only. Also enhance nullable fields in forms with proper
         widgets to preserve ``None``.
         (thanks to Wojtek Ruszczewski,
          resolves issue #163)
  FIXED: Admin prepopulated_fields is now handled properly.
         (thanks to Rafleze,
          resolves issue #181 and #190)
  FIXED: Form saving when translated field is excluded (e.g. in admin)
         (resolves issue #183)

CHANGED: Every model's manager is patched as MultiLingual, not only objects.
         (resolved issue #198)
CHANGED: Display "make null" checkboxes in model forms.
CHANGED: MODELTRANSLATION_DEBUG setting defaults to False instead of
         settings.DEBUG.
CHANGED: Drop support for Python 2.5 and Django 1.3.


v0.6.1
======
Date: 2013-03-17
Packaged from revision fc8a3034897b8b818c74f41c43a92001e536d970

  FIXED: Joined query does not use translated fields.
         (resolves issue #162)


v0.6
====
Date: 2013-03-01
Packaged from revision ea0e2db68900371146d39dcdf88b29091ee5222f

  ADDED: A new ENABLE_FALLBACKS setting and a context manager for switching
         fallbacks temporarily.
         (thanks to Wojtek Ruszczewski,
          resolves issue #152)
  ADDED: Major refactoring of the tabbed translation fields javascript. Adds
         support for tabular inlines and includes proper handling of stacked